added company routes/controllers/tests/docs
